RESOLVED FIXED164572
REGRESSION (r208455): LayoutTests swipe/pushState-cached-back-swipe.html and swipe/main-frame-pinning-requirement.html are failing
https://bugs.webkit.org/show_bug.cgi?id=164572
Summary REGRESSION (r208455): LayoutTests swipe/pushState-cached-back-swipe.html and ...
Ryan Haddad
Reported 2016-11-09 17:05:53 PST
LayoutTests swipe/pushState-cached-back-swipe.html and swipe/main-frame-pinning-requirement.html are failing https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r208501%20(10931)/results.html --- /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/swipe/main-frame-pinning-requirement-expected.txt +++ /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/swipe/main-frame-pinning-requirement-actual.txt @@ -16,9 +16,9 @@ scroll event (delta 10 0, phase 'changed') didBeginSwipe swipe event (delta 1 0, phase 'changed') +willEndSwipe swipe event (delta 256 0, phase 'changed') swipe event (delta 0 0, phase 'ended') -willEndSwipe -didEndSwipe didRemoveSwipeSnapshot +Failure. The swipe should have navigated back to the first page. (expected: true, actual: false)
Attachments
proposed fix (2.83 KB, patch)
2016-11-16 16:21 PST, Alexey Proskuryakov
no flags
Ryan Haddad
Comment 1 2016-11-09 17:06:33 PST
Seeing this on El Capitan Release WK2
Ryan Haddad
Comment 2 2016-11-10 15:06:53 PST
Alexey Proskuryakov
Comment 3 2016-11-16 14:27:19 PST
Test history suggests that this started with http://trac.webkit.org/r208455 The tests sometimes passes on retry, and sometimes fails again.
Alexey Proskuryakov
Comment 4 2016-11-16 15:11:55 PST
Reproduces locally with this command: run-webkit-tests swipe/basic-cached-back-swipe.html swipe/pushState-cached-back-swipe.html
Alexey Proskuryakov
Comment 5 2016-11-16 16:21:22 PST
Created attachment 294997 [details] proposed fix
WebKit Commit Bot
Comment 6 2016-11-16 17:14:41 PST
Comment on attachment 294997 [details] proposed fix Clearing flags on attachment: 294997 Committed r208831: <http://trac.webkit.org/changeset/208831>
WebKit Commit Bot
Comment 7 2016-11-16 17:14:45 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 8 2016-11-16 18:40:26 PST
Comment on attachment 294997 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=294997&action=review > Tools/WebKitTestRunner/mac/TestControllerMac.mm:107 > + while ([NSApp nextEventMatchingMask:NSEventMaskGesture | NSEventMaskScrollWheel untilDate:nil inMode:NSDefaultRunLoopMode dequeue:YES]) { Oops. Sorry about that!
Note You need to log in before you can comment on or make changes to this bug.