REGRESSION (r208455): LayoutTests swipe/pushState-cached-back-swipe.html and swipe/main-frame-pinning-requirement.html are failing https://bugs.webkit.org/show_bug.cgi?id=164572

Reviewed by Tim Horton.

Tools:

* WebKitTestRunner/mac/TestControllerMac.mm: (WTR::TestController::platformResetStateToConsistentValues):
Use the correct constant.

LayoutTests:

* platform/mac-wk2/TestExpectations: Remove flakiness expectations.


Canonical link: https://commits.webkit.org/182543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208831 268f45cc-cd09-0410-ab3c-d52691b4dbfc